--- a/tmux.conf
+++ b/tmux.conf
@@ -2,16 +2,16 @@
 set -g prefix C-a
 bind C-a send-prefix
 unbind C-b
+unbind p
 
 # set mouse control
-set -g mode-mouse on
-setw -g mouse-select-window on
-setw -g mouse-select-pane on
-set -g mouse-resize-pane on
+set -g mouse on
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
+
+set -g history-limit 50000
 
 # set terminal 256color
 set -g default-terminal "screen-256color"
@@ -22,6 +22,8 @@ set -sg escape-time 0
 # split pane with | and -
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
+
+bind p previous-window
 
 bind N command-prompt 'new-session -c "#{pane_current_path}" -s %%'
 bind c new-window -c "#{pane_current_path}"
@@ -62,7 +64,8 @@ set -g status-left ""
 set -g status-right "#(whoami)@#H#[default] "
 
 # Smart pane switching with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+is_vim='tmux show-env tmux_navigator_bypass_#{pane_id} >/dev/null 2>&1 \
+  || echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
@@ -75,13 +78,19 @@ set-option -g renumber-windows on
 setw -g mode-keys vi
 
 # copy and paste
-unbind [
 bind Escape copy-mode
-unbind p
-bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy Y copy-pipe "xclip -sel clip -i"
+
+unbind Enter
+bind-key Enter resize-pane -Z
 
 # move current window
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
+
+bind-key -nr C-Up resize-pane -U
+bind-key -nr C-Down resize-pane -D
+bind-key -nr C-Left resize-pane -L
+bind-key -nr C-Right resize-pane -R
