--- a/.gitmodules
+++ b/.gitmodules
@@ -139,3 +139,9 @@
 [submodule "vim/bundle/vim-sass-lint"]
 	path = vim/bundle/vim-sass-lint
 	url = https://github.com/gcorne/vim-sass-lint
+[submodule "vim/bundle/vim-airline-themes"]
+	path = vim/bundle/vim-airline-themes
+	url = https://github.com/vim-airline/vim-airline-themes
+[submodule "vim/bundle/vim-lastplace"]
+	path = vim/bundle/vim-lastplace
+	url = https://github.com/dietsche/vim-lastplace
