--- a/.gitmodules
+++ b/.gitmodules
@@ -25,30 +25,18 @@
 [submodule "vim/bundle/vim-fugitive"]
 	path = vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
-[submodule "vim/bundle/mustache"]
-	path = vim/bundle/mustache
-	url = https://github.com/mustache/vim-mustache-handlebars.git
 [submodule "vim/bundle/vim-commentary"]
 	path = vim/bundle/vim-commentary
 	url = https://github.com/tpope/vim-commentary.git
 [submodule "vim/bundle/vim-surround"]
 	path = vim/bundle/vim-surround
 	url = https://github.com/tpope/vim-surround.git
-[submodule "vim/bundle/scss-syntax.vim"]
-	path = vim/bundle/scss-syntax.vim
-	url = https://github.com/cakebaker/scss-syntax.vim.git
 [submodule "vim/bundle/vim-autoformat"]
 	path = vim/bundle/vim-autoformat
 	url = https://github.com/Chiel92/vim-autoformat.git
-[submodule "vim/bundle/vim-haml"]
-	path = vim/bundle/vim-haml
-	url = https://github.com/tpope/vim-haml.git
 [submodule "vim/bundle/vim-tmux-navigator"]
 	path = vim/bundle/vim-tmux-navigator
 	url = https://github.com/christoomey/vim-tmux-navigator.git
-[submodule "vim/bundle/vim-javascript"]
-	path = vim/bundle/vim-javascript
-	url = https://github.com/pangloss/vim-javascript.git
 [submodule "vim/bundle/vim-over"]
 	path = vim/bundle/vim-over
 	url = https://github.com/osyo-manga/vim-over.git
@@ -82,9 +70,6 @@
 [submodule "vim/bundle/vim-eunuch"]
 	path = vim/bundle/vim-eunuch
 	url = https://github.com/tpope/vim-eunuch.git
-[submodule "vim/bundle/vim-jsx"]
-	path = vim/bundle/vim-jsx
-	url = https://github.com/mxw/vim-jsx.git
 [submodule "vim/bundle/quick-scope"]
 	path = vim/bundle/quick-scope
 	url = https://github.com/unblevable/quick-scope
@@ -100,9 +85,6 @@
 [submodule "vim/bundle/editorconfig"]
 	path = vim/bundle/editorconfig
 	url = https://github.com/editorconfig/editorconfig-vim.git
-[submodule "vim/bundle/apiblueprint.vim"]
-	path = vim/bundle/apiblueprint.vim
-	url = https://github.com/kylef/apiblueprint.vim.git
 [submodule "vim/bundle/tagbar"]
 	path = vim/bundle/tagbar
 	url = https://github.com/majutsushi/tagbar
@@ -145,3 +127,6 @@
 [submodule "vim/bundle/vim-lastplace"]
 	path = vim/bundle/vim-lastplace
 	url = https://github.com/dietsche/vim-lastplace
+[submodule "vim/bundle/vim-polygot"]
+	path = vim/bundle/vim-polygot
+	url = https://github.com/sheerun/vim-polyglot
