--- a/tmux.conf
+++ b/tmux.conf
@@ -14,7 +14,11 @@ set -g pane-base-index 1
 set -g history-limit 50000
 
 # set terminal 256color
-set -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+set-option -g set-titles on
+set-option -g set-titles-string '#{pane_title}'
 
 # make delay minimal
 set -sg escape-time 0
@@ -75,13 +79,9 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # renumber windows automatically when one gets deleted
 set-option -g renumber-windows on
 
-setw -g mode-keys vi
-
 # copy and paste
 bind Escape copy-mode
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-bind-key -t vi-copy Y copy-pipe "xclip -sel clip -i"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 unbind Enter
 bind-key Enter resize-pane -Z
