--- a/tmux.conf
+++ b/tmux.conf
@@ -35,25 +35,24 @@ bind c new-window -c "#{pane_current_path}"
 bind r source-file ~/.tmux.conf
 
 # default statusbar colors
-set-option -g status-bg colour235
-set-option -g status-fg colour136
-set-option -g status-attr default
+set-option -g status-style bg=colour235,fg=colour136,default
 
 # default window title colors
-set-window-option -g window-status-fg colour244
-set-window-option -g window-status-bg default
+set-window-option -g window-status-style fg=colour244,bg=default
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166
-set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-style fg=colour166,bg=default
+
+set-option -g status-interval 5
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{pane_current_command}:#{b:pane_current_path}'
 
 # pane border color
-set-option -g pane-border-fg colour236
-set-option -g pane-active-border-fg colour244
+set-option -g pane-border-style fg=colour236
+set-option -g pane-active-border-style fg=colour244
 
 # message text
-set-option -g message-bg colour235
-set-option -g message-fg colour166
+set-option -g message-style bg=colour235,fg=colour166
 
 # pane number display
 set-option -g display-panes-active-colour colour33
